# sychra-physics

./: phy_engine.h.txt  phy_engine.txt
assets/: initial.glb  initial2.glb
shaders/: compile.bat  tex_image.frag
shaders/particle/: compile.bat  particle.frag  particle.vert  particle_frag.spv  particle_vert.spv
src/: CMakeLists.txt  camera.cpp  camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_loader.h  vk_types.h
src/physics/: phy_collision.cpp  phy_collision.h  phy_engine.cpp  phy_engine.h  phy_particle.h
src/renderer/: vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
